transparent-header-offset fix for alignfull first

--- a/assets/scss/components/header/_page-header.scss
+++ b/assets/scss/components/header/_page-header.scss
@@ -5,7 +5,6 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	padding-top: var(--transparent-header-offset, 0);
 	overflow: hidden;
 	color: var(--page-header-color, var(--color-body));
 	text-align: var(--page-header-text-align, center);
